Fix mobile nav rail shift by removing negative side offsets

--- a/cafea/app.css
+++ b/cafea/app.css
@@ -63,10 +63,8 @@ body {
   width: 100%;
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
-  margin-left: -4px;
-  margin-right: -4px;
-  padding-left: 4px;
-  padding-right: 4px;
+  margin: 0;
+  padding: 0;
   text-align: center;
 }
 
